nbh 0907 add ver1

--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521:XE
-    username: amamranth
+    username: amaranth
     password: 1234
 
 mybatis:
